# ginger

./: README.md  package-lock.json  package.json  pyproject.toml
ginger/: app.py
static/: index.html
static/js/: app.js
